--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -54,7 +54,7 @@
             <TextBox Padding="5" Text="{Binding Path=RepositoryPath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="10" />
         </DockPanel>
         <Image Source="readify.png" Grid.Row="1" Stretch="None" HorizontalAlignment="Right" VerticalAlignment="Bottom" Opacity="0.5" Margin="30"></Image>
-        <Image Source="altnet.gif" Grid.Row="1" Stretch="None" HorizontalAlignment="Right" VerticalAlignment="Bottom" Opacity="0.5" Margin="0,0,182,429"></Image>
+        <Image Source="altnet.gif" Grid.Row="1" Stretch="None" Opacity="0.5" Margin="10,10,0,0" HorizontalAlignment="Left" Width="200" Height="77" VerticalAlignment="Top"/>
         <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
             <ui:CommitGraphLayout
                 Graph="{Binding Path=Graph}"
